examples/interdomain/nsm_istio_vl3/alpine-istio.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kubectl.kubernetes.io/default-container: alpine
    kubectl.kubernetes.io/default-logs-container: alpine
    prometheus.io/path: /stats/prometheus
    prometheus.io/port: "15020"
    prometheus.io/scrape: "true"
    sidecar.istio.io/status: '{"initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["workload-socket","workload-certs","istio-envoy","istio-data","istio-podinfo","istio-token","istiod-ca-cert"],"imagePullSecrets":null,"revision":"default"}'
  creationTimestamp: "2022-09-02T12:58:51Z"
  generateName: alpine-545965d7f7-
  labels:
    app: alpine
    istio-injection: enabled
    pod-template-hash: 545965d7f7
    security.istio.io/tlsMode: istio
    service.istio.io/canonical-name: alpine
    service.istio.io/canonical-revision: latest
  name: alpine-545965d7f7-bfj8m
  namespace: default
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: alpine-545965d7f7
    uid: 54885c07-b389-4d4e-971d-7dc9b8a08dfd
  resourceVersion: "659033"
  uid: 3df1ba99-e34e-4fe5-8eeb-c5c9eadfb871
spec:
  containers:
  - image: alpine:3.15.0
    imagePullPolicy: IfNotPresent
    name: alpine
    resources: {}
    stdin: true
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    tty: true
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-dcpwp
      readOnly: true
  - args:
    - proxy
    - sidecar
    - --domain
    - $(POD_NAMESPACE).svc.cluster.local
    - --proxyLogLevel=warning
    - --proxyComponentLogLevel=misc:error
    - --log_output_level=default:info
    - --concurrency
    - "2"
    image: docker.io/istio/proxyv2:1.14.3
    imagePullPolicy: IfNotPresent
    name: istio-proxy
    ports:
    - containerPort: 15090
      name: http-envoy-prom
      protocol: TCP
    readinessProbe:
      failureThreshold: 30
      httpGet:
        path: /healthz/ready
        port: 15021
        scheme: HTTP
      initialDelaySeconds: 1
      periodSeconds: 2
      successThreshold: 1
      timeoutSeconds: 3
    resources:
      limits:
        cpu: "2"
        memory: 1Gi
      requests:
        cpu: 100m
        memory: 128Mi
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - ALL
      privileged: false
      readOnlyRootFilesystem: true
      runAsGroup: 1337
      runAsNonRoot: true
      runAsUser: 1337
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/workload-spiffe-uds
      name: workload-socket
    - mountPath: /var/run/secrets/workload-spiffe-credentials
      name: workload-certs
    - mountPath: /var/run/secrets/istio
      name: istiod-ca-cert
    - mountPath: /var/lib/istio/data
      name: istio-data
    - mountPath: /etc/istio/proxy
      name: istio-envoy
    - mountPath: /var/run/secrets/tokens
      name: istio-token
    - mountPath: /etc/istio/pod
      name: istio-podinfo
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-dcpwp
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: kind-worker2
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - emptyDir: {}
    name: workload-socket
  - emptyDir: {}
    name: workload-certs
  - emptyDir:
      medium: Memory
    name: istio-envoy
  - emptyDir: {}
    name: istio-data
  - downwardAPI:
      defaultMode: 420
      items:
      - fieldRef:
          apiVersion: v1
          fieldPath: metadata.labels
        path: labels
      - fieldRef:
          apiVersion: v1
          fieldPath: metadata.annotations
        path: annotations
    name: istio-podinfo
  - name: istio-token
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          audience: istio-ca
          expirationSeconds: 43200
          path: istio-token
  - configMap:
      defaultMode: 420
      name: istio-ca-root-cert
    name: istiod-ca-cert
  - name: kube-api-access-dcpwp
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2022-09-02T12:58:51Z"
    message: 'containers with incomplete status: [istio-init]'
    reason: ContainersNotInitialized
    status: "False"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2022-09-02T12:58:51Z"
    message: 'containers with unready status: [alpine istio-proxy]'
    reason: ContainersNotReady
    status: "False"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2022-09-02T12:58:51Z"
    message: 'containers with unready status: [alpine istio-proxy]'
    reason: ContainersNotReady
    status: "False"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2022-09-02T12:58:51Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - image: alpine:3.15.0
    imageID: ""
    lastState: {}
    name: alpine
    ready: false
    restartCount: 0
    started: false
    state:
      waiting:
        reason: PodInitializing
  - image: docker.io/istio/proxyv2:1.14.3
    imageID: ""
    lastState: {}
    name: istio-proxy
    ready: false
    restartCount: 0
    started: false
    state:
      waiting:
        reason: PodInitializing
  hostIP: 172.19.0.4
  initContainerStatuses:
  - containerID: containerd://60c3340e8aa821ad625080df14f63744760302be5e2d9120f70acf3d4a755b49
    image: docker.io/istio/proxyv2:1.14.3
    imageID: docker.io/istio/proxyv2@sha256:b7dc502a51251f7e97ae849382177ebd0ab19668e40f49d6bab5048debfefd48
    lastState:
      terminated:
        containerID: containerd://f91520a39a441d4dd644468250f25bf85042115dacd24fc831dde282f4bc2861
        exitCode: 255
        finishedAt: "2022-09-05T08:47:14Z"
        reason: Error
        startedAt: "2022-09-05T08:47:14Z"
    name: istio-init
    ready: false
    restartCount: 11
    state:
      terminated:
        containerID: containerd://60c3340e8aa821ad625080df14f63744760302be5e2d9120f70acf3d4a755b49
        exitCode: 255
        finishedAt: "2022-09-05T08:48:48Z"
        reason: Error
        startedAt: "2022-09-05T08:48:48Z"
  phase: Pending
  podIP: 10.244.2.2
  podIPs:
  - ip: 10.244.2.2
  qosClass: Burstable
  startTime: "2022-09-02T12:58:51Z"
