examples/interdomain/nsm_istio_vl3/bookinfo.yaml
##################################################################################################
# This file defines the services, service accounts, and deployments for the Bookinfo sample.
#
# To apply all 4 Bookinfo services, their corresponding service accounts, and deployments:
#
#   kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml
#
# Alternatively, you can deploy any resource separately:
#
#   kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml -l service=reviews # reviews Service
#   kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml -l account=reviews # reviews ServiceAccount
#   kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml -l app=reviews,version=v3 # reviews-v3 Deployment
##################################################################################################

##################################################################################################
# Details service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: details
  labels:
    app: details
    service: details
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: details
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: details-v1
  labels:
    app: details
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details
      version: v1
  template:
    metadata:
      labels:
        app: details
        version: v1
    spec:
      serviceAccountName: bookinfo-details
      containers:
        - name: details
          image: docker.io/istio/examples-bookinfo-details-v1:1.16.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9080
          securityContext:
            runAsUser: 1000
---
##################################################################################################
# Ratings service
##################################################################################################
#apiVersion: v1
#kind: Service
#metadata:
#  name: ratings
#  labels:
#    app: ratings
#    service: ratings
#spec:
#  ports:
#    - port: 9080
#      name: http
#  selector:
#    app: ratings
#---
#apiVersion: v1
#kind: ServiceAccount
#metadata:
#  name: bookinfo-ratings
#  labels:
#    account: ratings
#---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: ratings-v1
#  labels:
#    app: ratings
#    version: v1
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: ratings
#      version: v1
#  template:
#    metadata:
#      labels:
#        app: ratings
#        version: v1
#    spec:
#      serviceAccountName: bookinfo-ratings
#      containers:
#        - name: ratings
#          image: docker.io/istio/examples-bookinfo-ratings-v1:1.16.4
#          imagePullPolicy: IfNotPresent
#          ports:
#            - containerPort: 9080
#          securityContext:
#            runAsUser: 1000
#---
###################################################################################################
## Reviews service
###################################################################################################
#apiVersion: v1
#kind: Service
#metadata:
#  name: reviews
#  labels:
#    app: reviews
#    service: reviews
#spec:
#  ports:
#    - port: 9080
#      name: http
#  selector:
#    app: reviews
#---
#apiVersion: v1
#kind: ServiceAccount
#metadata:
#  name: bookinfo-reviews
#  labels:
#    account: reviews
#---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: reviews-v1
#  labels:
#    app: reviews
#    version: v1
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: reviews
#      version: v1
#  template:
#    metadata:
#      labels:
#        app: reviews
#        version: v1
#    spec:
#      serviceAccountName: bookinfo-reviews
#      containers:
#        - name: reviews
#          image: docker.io/istio/examples-bookinfo-reviews-v1:1.16.4
#          imagePullPolicy: IfNotPresent
#          env:
#            - name: LOG_DIR
#              value: "/tmp/logs"
#          ports:
#            - containerPort: 9080
#          volumeMounts:
#            - name: tmp
#              mountPath: /tmp
#            - name: wlp-output
#              mountPath: /opt/ibm/wlp/output
#          securityContext:
#            runAsUser: 1000
#      volumes:
#        - name: wlp-output
#          emptyDir: {}
#        - name: tmp
#          emptyDir: {}
#---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: reviews-v2
#  labels:
#    app: reviews
#    version: v2
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: reviews
#      version: v2
#  template:
#    metadata:
#      labels:
#        app: reviews
#        version: v2
#    spec:
#      serviceAccountName: bookinfo-reviews
#      containers:
#        - name: reviews
#          image: docker.io/istio/examples-bookinfo-reviews-v2:1.16.4
#          imagePullPolicy: IfNotPresent
#          env:
#            - name: LOG_DIR
#              value: "/tmp/logs"
#          ports:
#            - containerPort: 9080
#          volumeMounts:
#            - name: tmp
#              mountPath: /tmp
#            - name: wlp-output
#              mountPath: /opt/ibm/wlp/output
#          securityContext:
#            runAsUser: 1000
#      volumes:
#        - name: wlp-output
#          emptyDir: {}
#        - name: tmp
#          emptyDir: {}
#---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: reviews-v3
#  labels:
#    app: reviews
#    version: v3
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: reviews
#      version: v3
#  template:
#    metadata:
#      labels:
#        app: reviews
#        version: v3
#    spec:
#      serviceAccountName: bookinfo-reviews
#      containers:
#        - name: reviews
#          image: docker.io/istio/examples-bookinfo-reviews-v3:1.16.4
#          imagePullPolicy: IfNotPresent
#          env:
#            - name: LOG_DIR
#              value: "/tmp/logs"
#          ports:
#            - containerPort: 9080
#          volumeMounts:
#            - name: tmp
#              mountPath: /tmp
#            - name: wlp-output
#              mountPath: /opt/ibm/wlp/output
#          securityContext:
#            runAsUser: 1000
#      volumes:
#        - name: wlp-output
#          emptyDir: {}
#        - name: tmp
#          emptyDir: {}
#---
##################################################################################################
# Productpage services
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: productpage
  labels:
    app: productpage
    service: productpage
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: productpage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productpage-v1
  labels:
    app: productpage
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productpage
      version: v1
  template:
    metadata:
      labels:
        app: productpage
        version: v1
    spec:
      serviceAccountName: bookinfo-productpage
      containers:
        - name: productpage
          image: docker.io/istio/examples-bookinfo-productpage-v1:1.16.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9080
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          securityContext:
            runAsUser: 1000
      volumes:
        - name: tmp
          emptyDir: {}
---
