examples/interdomain/nsm_istio_vl3/WorkloadEntry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: details-svc
spec:
  hosts:
    - details.bookinfo.com
  location: MESH_INTERNAL
  ports:
    - number: 9080
      name: http
      protocol: HTTP
      targetPort: 9080
  resolution: STATIC
  workloadSelector:
    labels:
      app: details-legacy
